--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 
-.clearFix{content:".";display:block;height:0;clear:both;visibility:hidden;}
+.clearFix:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
 
 .fl{float:left;}
 .fr{float:right;}
